--- a/arthur.html
+++ b/arthur.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-	<head>
-		<meta charset="UTF-8"/>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta name="description" content="CDA"/>
-		<link rel="stylesheet" href="src/ressources/css/style.css"/>
-		<title>Présentation</title>
-	</head>
-
-	<body>
-		<header class="header">
-			<h1 class="header-title">CDA 01 test 1</h1>
-			<nav>
-				<a class="accueil" href="index.html">Accueil</a>
-				<a href="arthur.html">Arthur</a>
-				<a href="morgan.html">Morgan</a>
-				<a href="nathan.html">Nathan</a>
-				<div id="indicator"></div>
-			</nav>
-		</header>
-
-		<main class="wrapper">
-			<section class="card nom">
-				<h1>Arthur Tonnoir</h1>
-				<img src="src/ressources/image/arthur.jpg" alt="photo"/>
-			</section>
-
-			<section class="content">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/ressources/css/morgan.css">
+    <link rel="stylesheet" href="src/ressources/css/style.css" />
+    <title>Présentation de Morgan</title>
+</head>
+<body>
+    <header class="header">
+        <h1 class="header-title">CDA 01 test 1</h1>
+        <nav>
+            <a class="accueil" href="index.html">Accueil</a>
+            <a href="arthur.html">Arthur</a>
+            <a href="morgan.html">Morgan</a>
+            <a href="nathan.html">Nathan</a>
+            <div id="indicator"></div>
+        </nav>
+    </header>
+    <div class="cards">
+        <div class="card image">
+            <div class="container">
+                <div class="picture">
+                    <img src="src/ressources/image/arthur.jpg" alt="photo">
+                </div>
+                <p class="name">Arthur Tonnoir</p>
+                <div class="reseaux">
+                    <div class="icon"><a href="https://fr.linkedin.com/in/morgan-ferlin"><img src="/src/ressources/image/linkedin.png" alt="linkedin"></a></div>
+                    <div class="icon"><a href="https://github.com"><img src="/src/ressources/image/github.png" alt="github"></a></div>
+                </div>
+            </div>
+        </div>
+        <section class="content">
 
 				<article class="card parcours">
 					<h2>Parcours :</h2>
@@ -68,15 +72,6 @@
 				</article>
 
 				<article class="card reseau">
-					<div>
-						<h3>Réseaux :</h3>
-						<p>
-							<a href="https://fr.linkedin.com/in/arthur-tonnoir/"><img src="src/ressources/image/linkedin.png" alt="linkedin"></a>
-							<a href="https://github.com/arthur-tonnoir/"><img src="src/ressources/image/github.png" alt="github"></a>
-						</p>
-					</div>
-
-					<div>
 						<h3>Langages & Outils :</h3>
 						<p>
 							<a href="https://getbootstrap.com" target="_blank" rel="noreferrer">
@@ -107,28 +102,26 @@
 					</div>
 				</article>
 			</section>
-		</main>
-
-		<footer class="footer">
-			<div class="container">
-				<div class="groupeButton">
-					<a href="nathan.html" class="button">
-						<div class="button__line"></div>
-						<div class="button__line"></div>
-						<span class="button__text">Profil Précédent</span>
-						<div class="button__drow1"></div>
-						<div class="button__drow2"></div>
-					</a>
-					<a href="morgan.html" class="button">
-						<div class="button__line"></div>
-						<div class="button__line"></div>
-						<span class="button__text">Profil Suivant</span>
-						<div class="button__drow1"></div>
-						<div class="button__drow2"></div>
-					</a>
-				</div>
-			</div>
-			<p>© 2023 - Le footer</p>
-		</footer>
-	</body>
-</html></body></html>
+    <footer class="footer">
+        <div class="container">
+            <div class="groupeButton">
+                    <a href="arthur.html" class="button">
+                        <div class="button__line"></div>
+                        <div class="button__line"></div>
+                        <span class="button__text">Profil Précédent</span>
+                        <div class="button__drow1"></div>
+                        <div class="button__drow2"></div>
+                    </a>
+                    <a href="nathan.html" class="button">
+                        <div class="button__line"></div>
+                        <div class="button__line"></div>
+                        <span class="button__text">Profil Suivant</span>
+                        <div class="button__drow1"></div>
+                        <div class="button__drow2"></div>
+                    </a>
+            </div>
+        </div>
+        <p>© 2023 - Le footer</p>
+    </footer>  
+</body>
+</html>
