--- a/nathan.html
+++ b/nathan.html
@@ -4,7 +4,6 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="src/ressources/css/morgan.css">
 		<link rel="stylesheet" href="src/ressources/css/style.css"/>
 		<title>Présentation de Nathan</title>
 	</head>
@@ -23,7 +22,7 @@
 			<div class="card image">
 				<div class="container">
 					<div class="picture">
-						<img src="src/ressources/image/Nathan-Photo.PNG" alt="photo">
+						<img src="src/ressources/image/NathanPhoto.PNG" alt="photo">
 					</div>
 					<p class="name">Nathan Lachery</p>
 					<div class="reseaux">
@@ -41,10 +40,9 @@
 				<article class="card parcours">
 					<h2>Parcours :</h2>
 					<ul>
-						<li>2023 - TP Concepteur développeur d'application</li>
-						<li>2022 - Formation Java/JEE</li>
-						<li>2021 - BTS Systeme informatique au organisation, Solution Logiciel et application métier</li>
-						<li>2019 - Bac pro Systeme numérique</li>
+						<li>2023 - TP Concepteur Développeur d'Application</li>
+						<li>2022 - TP Développeur Web & Web Mobile</li>
+						<li>2017 - Bac pro Maintenance Equipements Industriels</li>
 					</ul>
 				</article>
 
@@ -52,17 +50,17 @@
 					<div class="p-fort">
 						<h2>Point fort :</h2>
 						<ul>
-							<li>Java</li>
+							<li>PHP</li>
 							<li>HTML</li>
-							<li>CSS</li>
-							<li>JavaScript</li>
+							<li>Anglais</li>
 						</ul>
 					</div>
 					<div class="p-faible">
 						<h2>Point faible :</h2>
 						<ul>
-							<li>PHP</li>
-							<li>Anglais</li>
+							<li>CSS</li>
+							<li>JavaScript</li>
+
 						</ul>
 					</div>
 				</article>
@@ -70,12 +68,12 @@
 				<article class="card attente">
 					<h2>Attente formation :</h2>
 					<p>
-						Afin de réaliser mon objectif de créer une entreprise, je continue de m'améliorer, de gagner en expérience. Pour pouvoir vendre des produits de qualité qui puisse plaire.
+						Afin de réaliser mon rêve de devenir , très très riche , je parcours le monde à la recherche de quelques dineros
 					</p>
 				</article>
 
 				<article class="card reseau">
-																																			
+
 					<h3>Langages & Outils :</h3>
 					<p>
 						<a href="https://getbootstrap.com" target="_blank" rel="noreferrer">
@@ -109,14 +107,14 @@
 		<footer class="footer">
 			<div class="container">
 				<div class="groupeButton">
-					<a href="arthur.html" class="button">
+					<a href="morgan.html" class="button">
 						<div class="button__line"></div>
 						<div class="button__line"></div>
 						<span class="button__text">Profil Précédent</span>
 						<div class="button__drow1"></div>
 						<div class="button__drow2"></div>
 					</a>
-					<a href="nathan.html" class="button">
+					<a href="arthur.html" class="button">
 						<div class="button__line"></div>
 						<div class="button__line"></div>
 						<span class="button__text">Profil Suivant</span>
