--- a/arthur.html
+++ b/arthur.html
@@ -1,38 +1,41 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/ressources/css/morgan.css">
-    <link rel="stylesheet" href="src/ressources/css/style.css" />
-    <title>Présentation de Morgan</title>
-</head>
-<body>
-    <header class="header">
-        <h1 class="header-title">CDA 01 test 1</h1>
-        <nav>
-            <a class="accueil" href="index.html">Accueil</a>
-            <a href="arthur.html">Arthur</a>
-            <a href="morgan.html">Morgan</a>
-            <a href="nathan.html">Nathan</a>
-            <div id="indicator"></div>
-        </nav>
-    </header>
-    <div class="cards">
-        <div class="card image">
-            <div class="container">
-                <div class="picture">
-                    <img src="src/ressources/image/arthur.jpg" alt="photo">
-                </div>
-                <p class="name">Arthur Tonnoir</p>
-                <div class="reseaux">
-                    <div class="icon"><a href="https://fr.linkedin.com/in/morgan-ferlin"><img src="/src/ressources/image/linkedin.png" alt="linkedin"></a></div>
-                    <div class="icon"><a href="https://github.com"><img src="/src/ressources/image/github.png" alt="github"></a></div>
-                </div>
-            </div>
-        </div>
-        <section class="content">
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="src/ressources/css/style.css"/>
+		<title>Présentation de Morgan</title>
+	</head>
+	<body>
+		<header class="header">
+			<h1 class="header-title">CDA 01 test 1</h1>
+			<nav>
+				<a class="accueil" href="index.html">Accueil</a>
+				<a href="arthur.html">Arthur</a>
+				<a href="morgan.html">Morgan</a>
+				<a href="nathan.html">Nathan</a>
+				<div id="indicator"></div>
+			</nav>
+		</header>
+		<div class="cards">
+			<div class="card image">
+				<div class="container">
+					<div class="picture">
+						<img src="src/ressources/image/arthur.jpg" alt="photo">
+					</div>
+					<p class="name">Arthur Tonnoir</p>
+					<div class="reseaux">
+						<div class="icon">
+							<a href="https://fr.linkedin.com/in/arthur-tonnoir"><img src="/src/ressources/image/linkedin.png" alt="linkedin"></a>
+						</div>
+						<div class="icon">
+							<a href="https://github.com/Arthur-Tonnoir"><img src="/src/ressources/image/github.png" alt="github"></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<section class="content">
 
 				<article class="card parcours">
 					<h2>Parcours :</h2>
@@ -59,6 +62,7 @@
 						<ul>
 							<li>PHP</li>
 							<li>Anglais</li>
+							<li>Design</li>
 						</ul>
 					</div>
 				</article>
@@ -67,61 +71,55 @@
 					<h2>Attente formation :</h2>
 					<p>
 						Afin de réaliser mon objectif de créer une entreprise, je continue de m'améliorer, de gagner en
-																													expérience. Pour pouvoir vendre des produits de qualité qui puisse plaire.
+																																			expérience. Pour pouvoir vendre des produits de qualité qui puisse plaire.
 					</p>
 				</article>
 
 				<article class="card reseau">
-						<h3>Langages & Outils :</h3>
-						<p>
-							<a href="https://getbootstrap.com" target="_blank" rel="noreferrer">
-								<img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-plain-wordmark.svg" alt="bootstrap" width="40" height="40"/>
-							</a>
-							<a href="https://www.w3schools.com/css/" target="_blank" rel="noreferrer">
-								<img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg" alt="css3" width="40" height="40"/>
-							</a>
-							<a href="https://www.figma.com/" target="_blank" rel="noreferrer">
-								<img src="https://www.vectorlogo.zone/logos/figma/figma-icon.svg" alt="figma" width="40" height="40"/>
-							</a>
-							<a href="https://git-scm.com/" target="_blank" rel="noreferrer">
-								<img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg" alt="git" width="40" height="40"/>
-							</a>
-							<a href="https://www.w3.org/html/" target="_blank" rel="noreferrer">
-								<img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg" alt="html5" width="40" height="40"/>
-							</a>
-							<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" rel="noreferrer">
-								<img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg" alt="javascript" width="40" height="40"/>
-							</a>
-							<a href="https://www.mysql.com/" target="_blank" rel="noreferrer">
-								<img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mysql/mysql-original-wordmark.svg" alt="mysql" width="40" height="40"/>
-							</a>
-							<a href="https://www.php.net" target="_blank" rel="noreferrer">
-								<img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/php/php-original.svg" alt="php" width="40" height="40"/>
-							</a>
-						</p>
-					</div>
+					<h3>Langages & Outils :</h3>
+					<p>
+						<a href="https://www.w3schools.com/css/" target="_blank" rel="noreferrer">
+							<img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg" alt="css3" width="40" height="40"/>
+						</a>
+						<a href="https://www.figma.com/" target="_blank" rel="noreferrer">
+							<img src="https://www.vectorlogo.zone/logos/figma/figma-icon.svg" alt="figma" width="40" height="40"/>
+						</a>
+						<a href="https://git-scm.com/" target="_blank" rel="noreferrer">
+							<img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg" alt="git" width="40" height="40"/>
+						</a>
+						<a href="https://www.w3.org/html/" target="_blank" rel="noreferrer">
+							<img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg" alt="html5" width="40" height="40"/>
+						</a>
+						<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" rel="noreferrer">
+							<img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg" alt="javascript" width="40" height="40"/>
+						</a>
+						<a href="https://www.mysql.com/" target="_blank" rel="noreferrer">
+							<img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mysql/mysql-original-wordmark.svg" alt="mysql" width="40" height="40"/>
+						</a>
+					</p>
 				</article>
 			</section>
-    <footer class="footer">
-        <div class="container">
-            <div class="groupeButton">
-                    <a href="arthur.html" class="button">
-                        <div class="button__line"></div>
-                        <div class="button__line"></div>
-                        <span class="button__text">Profil Précédent</span>
-                        <div class="button__drow1"></div>
-                        <div class="button__drow2"></div>
-                    </a>
-                    <a href="nathan.html" class="button">
-                        <div class="button__line"></div>
-                        <div class="button__line"></div>
-                        <span class="button__text">Profil Suivant</span>
-                        <div class="button__drow1"></div>
-                        <div class="button__drow2"></div>
-                    </a>
-            </div>
-        </div>
-        <p>© 2023 - Le footer</p>
-    </footer>  
-</body>
+		</div>
+		<footer class="footer">
+			<div class="container">
+				<div class="groupeButton">
+					<a href="morgan.html" class="button">
+						<div class="button__line"></div>
+						<div class="button__line"></div>
+						<span class="button__text">Profil Précédent</span>
+						<div class="button__drow1"></div>
+						<div class="button__drow2"></div>
+					</a>
+					<a href="nathan.html" class="button">
+						<div class="button__line"></div>
+						<div class="button__line"></div>
+						<span class="button__text">Profil Suivant</span>
+						<div class="button__drow1"></div>
+						<div class="button__drow2"></div>
+					</a>
+				</div>
+			</div>
+			<p>© 2023 - Le footer</p>
+		</footer>
+	</body>
 </html>
